Added models, dtos, search mapper, exceptions and handlers, basic search controller and service, search request validator, improved openapi
