# backend/service/src/main/java/org/dyploma/criteria/CriteriaType.java
@@ -1,0 +1,6 @@
+package org.dyploma.criteria;
+
+public enum CriteriaType {
+    PRICE,
+    DURATION
+}
